--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -43,3 +43,116 @@
         margin-right: 24px;
     }
 }
+
+@media only screen and (max-width: 800px) {
+    /* TABLET */
+
+    .footer {
+
+        &__container {
+            max-width: 688px;
+            background-color: #2C343E;
+        }
+    
+        &__inner-wrapper {
+            padding-top: 54px;
+            padding-bottom: 54px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    
+        &__logo {
+            margin-right: 0px;
+            margin-bottom: 32px;
+        }
+    
+        &__list {
+            display: flex;
+            margin-bottom: 65px;
+            gap: 33px;
+        }
+    
+        &__item-link {
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 15px;
+            letter-spacing: 0.923077px;
+            text-transform: uppercase;
+            color: #83888F;
+            text-decoration: none;
+            margin-right: 0px;
+            min-width: 94px;
+        }
+    
+        &__icon-wrapper {
+            margin-left: 0px;
+        }
+    
+        &__icon-link {
+            margin-right: 24px;
+        }
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    /* MOBILE */
+
+    .footer {
+
+        &__container {
+            max-width: 367px;
+            width: 100%;
+            background-color: #2C343E;
+        }
+    
+        &__inner-wrapper {
+            padding: 54px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        &__logo {
+            margin-right: 0px;
+            margin-bottom: 48px;
+            &-img {
+                width: 217px;
+                height: 24px;
+            }
+        }
+    
+        &__list {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 48px;
+            gap: 24px;
+            text-align: center;
+        }
+    
+        &__item-link {
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 15px;
+            letter-spacing: 0.923077px;
+            text-transform: uppercase;
+            color: #83888F;
+            text-decoration: none;
+            text-align: center;
+            margin-right: 0px;
+        }
+    
+        &__icon-wrapper {
+            margin-left: 20px;
+        }
+    
+        &__icon-link {
+            margin-right: 24px;
+        }
+    }
+}
