--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -124,6 +124,7 @@
             line-height: 32px;
             color: #333D4B;
             margin-bottom: 24px;
+            text-align: start;
         }
         
         &__description {
@@ -133,6 +134,7 @@
             font-size: 15px;
             line-height: 25px;
             color: #333D4B;
+            text-align: start;
         }
         
         @media
@@ -154,6 +156,8 @@
     .collection {
     
         &__container {
+            padding-left: 20px;
+            padding-right: 20px;
             margin-bottom: 120px;
         }
         
@@ -185,6 +189,7 @@
             height: 193px;
             object-fit: contain;
             margin-bottom: 24px;
+            margin-left: 20px;
         }
         
         &__item-wrapper {
@@ -200,15 +205,18 @@
             font-size: 24px;
             line-height: 32px;
             color: #333D4B;
+            text-align: center;
             margin-bottom: 24px;
         }
         
         &__description {
+            width: 282px;
             font-family: 'Barlow';
             font-style: normal;
             font-weight: 400;
             font-size: 15px;
             line-height: 25px;
+            text-align: center;
             color: #333D4B;
         }
         
